[tool.poetry]
name = "chatgpt_cli"
version = "0.1.0"
description = ""
authors = ["Mostafa Abdelrashied <mostafa.abdelrashied@outlook.de>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "chatgpt_cli"
from = "."

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.3"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
openai = "^1.57.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db = "chatgpt_cli.init_app:main"
chatgpt_cli = "chatgpt_cli.main:main"